<resources>
    <string name="app_name">Gardenia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sing_in">Sing in</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sing_up">Sing Up</string>
    <string name="name">Name</string>
    <string name="phone_email">Phone/Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_using">Or sign up using</string>
    <string name="analytics_text">分析</string>
    <string name="analytics_sub_text_light">基于历史数据的分析</string>
    <string name="rehabilitation_ratio_text">康复训练完成率</string>
    <string name="heart_rate">心率</string>
    <string name="bpm">Bpm</string>
    <string name="none">None</string>
    <string name="week_overview">本周记录</string>
    <string name="back">back</string>
    <string name="patient_info_text">病人信息</string>
    <string name="patient_weight">体重</string>
    <string name="patient_weight_value">%s kg</string>
    <string name="patient_height_value">%s cm</string>
    <string name="patient_height_text">身高</string>
    <string name="patient_scheme">计划</string>
    <string name="single_character">%s</string>
    <string name="process_ratio">计划进度</string>
    <string name="append_recode">补入记录</string>
    <string name="patient_append_recode_date">补入时间</string>
    <string name="patient_append_recode_time">补入时长 Min</string>
    <string name="button">button</string>
    <string name="history_recorde">历史记录</string>
    <string name="patient_history_list_item_date">%s</string>
    <string name="patient_history_list_item_value">%s%s%s%sMin</string>
    <string name="main_text">主页</string>
    <string name="patient_calendar_text">治疗日程</string>
    <string name="exit">退出</string>
    <string name="user_center">个人中心</string>
    <string name="about">关于</string>
    <string name="target_process">目标进度</string>
    <string name="bar_open">侧边栏打开</string>
    <string name="bar_close">侧边栏关闭</string>

</resources>