<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.PatientInfoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/patient_info_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/patient_info_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="770dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/patient_info_back"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patient_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/patient_info_text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:id="@+id/patient_weight_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/patient_weight"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/patient_weight_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/patient_weight_value"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:id="@+id/patient_height_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/patient_height_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/patient_height_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/patient_height_value"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:id="@+id/patient_scheme_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/patient_scheme"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/patient_scheme_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/single_character"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/patient_process"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/process_ratio"
                    android:textSize="20sp" />

                <com.alex.gardenia.component.SegmentProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    app:max="10"
                    app:progress="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/patient_recode_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/append_recode"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <TextView
                            android:id="@+id/patient_append_recode_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/patient_append_recode_date"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <TextView
                            android:id="@+id/patient_append_recode_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/patient_append_recode_time"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:id="@+id/patient_add_rcode_button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/button"
                        android:elevation="5dp"
                        app:srcCompat="@drawable/ic_plus" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/patient_add_recode_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/history_recorde"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/path_recode_history_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>