<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AnalyticsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/analytics_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/analytics_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="781dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/analytics_left_bar_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.1"
                android:background="@color/white"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_sidebar_button"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/analytics_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/analytics_text"
                android:textColor="@color/gray_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/analytics_user_ico"
                android:layout_width="48dp"
                android:layout_height="64dp"
                android:layout_weight="0.1"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/analytics_sub_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/analytics_text"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/analytics_sub_text_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/analytics_sub_text_light"
                android:textColor="@color/gray_dark" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/purple_300"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:singleLine="false"
                        android:text="@string/rehabilitation_ratio_text"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/rehabilitation_pie"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.6" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/analytics_heart_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/heart_rate"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/analytics_heart_rate_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/none"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/analytics_heart_rate_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/bpm"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/analytics_heart_rate_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/analytics_weekly_overview_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/week_overview"
                android:textSize="25sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>